# srzip

./: Makefile.bat  Makefile.dj  Makefile.in  README.md  aclocal.m4  bitfile.c  bitfile.h  config.c  config.dj  config.h.in  configure  configure.in  crc.c  crc.h  global.dj  global.h.in  m_ahc.c  m_ahc.h  m_bwt.c  m_bwt.h  m_cpy.c  m_cpy.h  m_rle.c  m_rle.h  m_shc.c  m_shc.h  parseopt.c  parseopt.h  srzip.c
bwt_as_stree/: Makefile.in  m_bwt.c  m_bwt.h  stest.c  stree.c  stree.h
doc/: manual.cs.html  manual.html  tech-notes.cs.html  tech-notes.html
doc/src/: manual.aft  manual.cs.aft  tech-notes.aft  tech-notes.cs.aft
